[package]
name = "vefas-sp1-program"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = { version = "5.2.1", features = ["embedded"] }
vefas-types = { path = "../../vefas-types" }
vefas-crypto-sp1 = { path = "../../vefas-crypto-sp1" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"

# Error handling
thiserror = "2.0"
