[package]
name = "zktls-program"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = { version = "5.2.1", features = ["embedded"] }
zktls-core = { path = "../../../crates/zktls-core" }
zktls-crypto-sp1 = { path = "../../../crates/zktls-crypto-sp1" }
zktls-zkvm = { path = "../../../crates/zktls-zkvm" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"
