[package]
name = "zktls-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "2.1", default-features = false, features = ["std"] }
zktls-core = { path = "../../../zktls-core" }
zktls-crypto-risc0 = { path = "../../../zktls-crypto-risc0" }
zktls-zkvm = { path = "../../../zktls-zkvm" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Error handling
thiserror = "1.0"

[patch.crates-io]
# RISC0 precompiles for cryptographic operations
# These patches enable RISC0's SHA-256 and bigint multiplication accelerators
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.1" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.6-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }

[profile.release]
# Optimize for RISC0 zkVM performance
codegen-units = 1
lto = "thin"
